fix(style): overflows in sidebar

--- a/src/styles.css
+++ b/src/styles.css
@@ -79,9 +79,7 @@
 }
 .sidebar-list ul li a {
   color: hsl(205, 13%, 40%);
-  /* text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden; */
+  word-wrap: break-word;
 }
 .sidebar-list ul li a:hover {
   color: hsl(205, 13%, 20%);
